# LetsOrder

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql  0002_lock_and_activity.sql  0003_menu_item_reference_url.sql  0004_auth.sql  0005_menu_item_revision.sql  0006_menu_item_ratings.sql  0007_review_hardening.sql  0008_realtime_tickets.sql
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
backend/src/models/: auth.rs  db_rows.rs  gathering.rs  health.rs  mod.rs
backend/src/routes/: auth.rs  chefs.rs  gatherings.rs  health.rs  mod.rs  realtime.rs
backend/src/services/: auth_service.rs  gathering_service.rs  mod.rs
backend/src/services/gathering_service/: activity_logs.rs  common.rs  gatherings.rs  locking.rs  menu_items.rs  mod.rs  photos.rs  ratings.rs  recommendations.rs
backend/tests/: api.rs
docs/: CODE_REVIEW.md  DEVELOPMENT_PLAN.md  LETSORDER_SERVICE_DESIGN.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth-and-conflict.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  gatherings.ts  menuItems.ts
frontend/src/components/: AuthModal.tsx  ConflictModal.tsx  DishCard.tsx  DishEditorModal.tsx  GatheringSummary.tsx  JoinMenuModal.tsx  MenuFilters.tsx  PageCard.tsx  RequireAuth.tsx  StatusPill.tsx
frontend/src/data/: mockGathering.ts
frontend/src/hooks/: useRealtimeRefresh.ts
frontend/src/pages/: CreateGatheringPage.tsx  (+7 more)
scripts/: backend.sh  check.sh  common.sh  dev.sh  frontend.sh  reset-data.sh  stop.sh
(+11 files in other folders)
